@@ -1,3 +1,7 @@
+2004-07-04  John Luke  <jluke@cfl.rr.com>
+
+	* Gui/OutputOptionsPanel.cs: use MessageService, remove ResourceService
+
 2004-07-01  Todd Berman  <tberman@off.net>
 
 	* Parser/Resolver.cs: fix up CtrlSpace resolving to add this. members
